src/styles/Home.css
.home {
  width: 100%;
  align-items: center;
  color: #f9004d;
}

.aboutme {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  background-color: #191919;
  color: #f0f0f0;
}

.aboutme h2 {
  font-family: "Segoe UI", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  font-size: 80px;
  color: #f9004d;
  height: 50px;
}

.aboutme .prompt {
  width: 40%;
  font-size: 30px;
}

.prompt svg {
  font-size: 60px;
  margin: 5px;
  color: white;
}

.skills {
  font-size: 35px;
  width: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

.skills h1 {
  color: #f9004d;
}

.skills .list {
  list-style: none;
  width: 60%;
}

.list span {
  font-size: 20px;
  color: #191919;
}

.prompt button {
  margin-bottom: 30px;
}

@media only screen and (max-width: 600px) {
  .aboutme .prompt {
    display: flex;
    flex-direction: column;
  }

  .aboutme {
    display: flex;
    flex-direction: column;
    position: relative;
  }

  .prompt {
    width: 100%;
  }

  .skills {
    width: 100%;
  }

  .aboutme h2 {
    font-size: 40px;
  }

  .aboutme .prompt {
    font-size: 20px;
  }

  .skills h1 {
    font-size: 30px;
  }

  .skills .list {
    font-size: 20px;
  }
}

